# nasta_mini

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
components/button_driver/: CMakeLists.txt  button_driver.c  button_driver.h
components/common/: CMakeLists.txt  app_context.h  message_types.h  settings.h  settings_storage.cpp  settings_storage.h  types.h  utils.cpp  utils.h
components/common/test/: CMakeLists.txt  settings_test.cpp  settings_unit_test.cpp  utils_test.cpp  utils_unit_test.cpp
components/display/: CMakeLists.txt  display.cpp  display.h  led_matrix.cpp  led_matrix.h  matrix_animations.h  matrix_graphics.h
components/display/test/: display_unit_test.cpp
components/network_manager/: CMakeLists.txt  network_manager.cpp  network_manager.h  setup_portal.cpp  setup_portal.h
components/system_manager/: CMakeLists.txt  led_matrix.cpp  led_matrix.h  matrix_graphics.h  system_manager.cpp  system_manager.h
components/system_manager/test/: CMakeLists.txt  system_manager_host_integration_test.cpp  system_manager_test.cpp
components/wifi_interface/: CMakeLists.txt  wifi_interface.cpp  wifi_interface.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  system_init.cpp
test/: CMakeLists.txt
test/main/: common_unit_tests_main.cpp  display_unit_tests_main.cpp  system_manager_host_integration_tests_main.cpp
test/support/: esp_log.h  led_strip.h
test/support/driver/: gpio.h
test/support/freertos/: FreeRTOS.h  queue.h  task.h
